# work-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
config/: agents.yaml  pipeline.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AgentChat.tsx  AgentDesk.tsx  AgentStatusSidebar.tsx  ArtifactViewer.tsx  ChatPopup.tsx  ConnectorLogos.tsx  FormattedThought.tsx  HUD.tsx  IsometricOffice.tsx  Layout.tsx  LiveAgentPanels.tsx  PixelCharacter.tsx
frontend/src/hooks/: useAgentThoughts.ts  useTheme.ts
frontend/src/pages/: Agents.tsx  AppSettings.tsx  Chat.tsx  Dashboard.tsx  Notes.tsx  (+3 more)
prompts/: architect_agent.md  backend_agent.md  classification.md  code_review_agent.md  devops_agent.md  frontend_agent.md  pm_agent.md  product_agent.md  qa_agent.md
src/: cli.py  factory.py  settings.py
src/agents/: __init__.py  architect.py  backend.py  base.py  claude_mixin.py  code_review.py  devops.py  frontend.py  investigator.py  pm.py  product.py  qa.py  registry.py
src/api/: app.py  notes.py
src/crews/: software_team.py
src/integrations/: __init__.py  git_client.py  github_oauth.py  github_rest.py  jira_client.py  jira_oauth.py  local_repo.py  repo_finder.py
src/models/: __init__.py  approval.py  artifacts.py  classification.py  context.py  crew_output.py  plan.py  task.py
src/observability/: __init__.py  cost_tracker.py  logging.py
src/orchestrator/: __init__.py  bus.py  decorators.py  engine.py  feedback.py  router.py
(+3 files in other folders)
